# BIMPCrypt

./: .gitignore  CMakeLists.txt  README.md  bmpcrypt.cpp  bmpcrypt.h  main.cpp
builds/build-BIMPCrypt-Desktop-Debug/: BIMPCrypt  BIMPCrypt.cbp  CMakeCache.txt  cmake_install.cmake
